react/notifications: fix notifications spacing

--- a/meinberlin/assets/scss/components_user_facing/_notifications.scss
+++ b/meinberlin/assets/scss/components_user_facing/_notifications.scss
@@ -93,6 +93,7 @@
 
 .feed-item__info {
     display: flex;
+    gap: 0.5rem;
     margin-bottom: 0.625rem;
 }
 
@@ -103,9 +104,11 @@
     display: flex;
     font-size: 0.8125rem;
     height: 2rem;
+    min-height: 2rem;
     justify-content: center;
     margin-right: 0.75rem;
     position: relative;
+    min-width: 2rem;
     width: 2rem;
 }
 
@@ -138,10 +141,11 @@
     margin-left: 0.75rem;
     margin-left: auto;
     text-align: right;
-    width: 30%;
+    min-width: 20%;
 
     @media screen and (min-width: $breakpoint-palm) {
         font-size: 1rem;
+        min-width: 8rem;
         width: auto;
     }
 }
@@ -158,6 +162,7 @@
 
 .feed-item__panel {
     display: flex;
+    gap: 0.5rem;
     flex-direction: column;
     padding-bottom: 0.75rem;
     padding-top: 0.75rem;
@@ -201,8 +206,10 @@
     color: $link-color;
     margin-top: 0.3125rem;
     margin-left: auto;
+    text-align: right;
 
     @media screen and (min-width: $breakpoint-palm) {
+        min-width: 8rem;
         margin-top: 0;
     }
 }
